# check_gitlab

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.in  nagios-plugins-gitlab.spec  sudo.gitlab
contrib/: Makefile.am
plugin-dir/: Makefile.am  check_gitlab.sh
