# Process this file with autoconf to produce a configure script.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.


AC_PREREQ([2.63])
AC_INIT([check_gitlab], [1.0.1], [rkoch@rk-it.at])
AM_INIT_AUTOMAKE

AC_PREFIX_DEFAULT(/usr/local/nagios/libexec)
PKG_NAME="check_gitlab"
PKG_VERSION="1.0.1"
PKG_REL_DATE="2015-10-27"

# Figure out how to invoke "install" and what install options to use
AC_PROG_INSTALL
AC_SUBST(INSTALL)

# What OS are we running?
AC_CANONICAL_HOST

# Options
AC_ARG_WITH(nagios_user,AC_HELP_STRING([--with-nagios-user=<user>],[sets user name to run Nagios]),nagios_user=$withval,nagios_user=nagios)
AC_ARG_WITH(nagios_group,AC_HELP_STRING([--with-nagios-group=<grp>],[sets group name to run Nagios]),nagios_group=$withval,nagios_group=nagios)
AC_SUBST(nagios_user)
AC_SUBST(nagios_group)

INSTALL_OPTS="-o $nagios_user -g $nagios_group"
AC_SUBST(INSTALL_OPTS)

AC_CONFIG_FILES([Makefile plugin-dir/Makefile])
AC_OUTPUT

# Review options
echo ""
echo ""
AC_MSG_RESULT([*** Configuration summary for $PKG_NAME $PKG_VERSION $PKG_REL_DATE ***:])
echo ""
echo ""
echo "  General Options:"
echo "  ------------------------- -------------------------"
AC_MSG_RESULT([               Nagios user: $nagios_user])
AC_MSG_RESULT([              Nagios group: $nagios_group])
AC_MSG_RESULT([         Plugins directory: $prefix])
echo ""
echo ""
echo "Review the options above for accuray. If they look okay,"
echo "type 'make all' to compile."
echo ""
